fixed spacing

--- a/src/Register/register.css
+++ b/src/Register/register.css
@@ -14,7 +14,7 @@
     width: 90%;
     justify-content: center;
     gap: 15%;
-    margin-bottom: 4%;
+    margin-bottom: 3%;
 }
 label{
     font-weight: bold;
